--- a/component-based-architechture-builder/.classpath
+++ b/component-based-architechture-builder/.classpath
@@ -24,6 +24,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.4">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -32,7 +33,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/fr.ema.dedal.metamodel"/>
 	<classpathentry kind="lib" path="D:/mrale/eclipse/modeling-photon/eclipse/plugins/org.eclipse.m2m.qvt.oml_3.6.0.v20160606-1156.jar" sourcepath="D:/mrale/eclipse/modeling-photon/eclipse/plugins/org.eclipse.m2m.qvt.oml.source_3.6.0.v20160606-1156.jar">
 		<accessrules>
 			<accessrule kind="discouraged" pattern="org/eclipse/m2m/internal/qvt/oml/*"/>
@@ -151,6 +151,7 @@
 			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
 		</accessrules>
 	</classpathentry>
+	<classpathentry kind="src" path="/fr.ema.dedal.metamodel"/>
 	<classpathentry kind="src" path="/org.xtext.spring.springConfig"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
