--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
 			<artifactId>log4j-api</artifactId>
 			<version>2.11.2</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
