--- a/XMLMerge/pom.xml
+++ b/XMLMerge/pom.xml
@@ -17,6 +17,11 @@
 	</dependencies>
 
 	<build>
+		<resources>
+       		<resource>
+          		<directory>src/main/resources</directory>
+        	</resource>
+      	</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
