--- a/type-hierarchy-builder/pom.xml
+++ b/type-hierarchy-builder/pom.xml
@@ -45,6 +45,12 @@
 
 
 	<build>
+	
+		<resources>
+       		<resource>
+          		<directory>src/main/resources</directory>
+        	</resource>
+      	</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
