--- a/releng/redoc.config/pom.xml
+++ b/releng/redoc.config/pom.xml
@@ -64,6 +64,12 @@
       <version>3.1.1</version>
       <type>maven-plugin</type>
     </dependency>
+        <dependency>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.8.1</version>
+      <type>maven-plugin</type>
+    </dependency>
 </dependencies>
 
  <build>
